add basic javascript components

--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -29,6 +29,6 @@
         <!-- Add your footer content here -->
     </footer>
 
-    <script src="../src/App.js"></script>
+    <script src="../src/components/LoginForm/LoginForm.js"></script>
 </body>
 </html>
