--- a/frontend/public/movie_details.html
+++ b/frontend/public/movie_details.html
@@ -37,6 +37,10 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
+
+                    <label for="review">Review:</label>
+                    <textarea id="review" name="review" rows="4" cols="50" placeholder="Write your review here"></textarea>
+
                     <button type="submit">Submit Rating & Review</button>
                 </form>
             </section>
@@ -47,6 +51,6 @@
         <!-- Add your footer content here -->
     </footer>
 
-    <script src="../src/App.js"></script>
+    <script src="../src/components/MovieDetails/MovieDetails.js"></script>
 </body>
 </html>
