--- a/frontend/public/movie_list.html
+++ b/frontend/public/movie_list.html
@@ -22,6 +22,6 @@
         <!-- Add your footer content here -->
     </footer>
 
-    <script src="../src/App.js"></script>
+    <script src="../src/components/MovieList/MovieList.js"></script>
 </body>
 </html>
