--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -28,6 +28,6 @@
         <!-- Add your footer content here -->
     </footer>
 
-    <script src="../src/App.js"></script>
+    <script src="../src/components/UserProfile/UserProfile.js"></script>
 </body>
 </html>
