--- a/frontend/public/signup.html
+++ b/frontend/public/signup.html
@@ -35,7 +35,7 @@
         <!-- Add your footer content here -->
     </footer>
 
-    <script src="../src/App.js></script>
+    <script src="../src/components/SignupForm/SignupForm.js></script>
 
 </body>
 </html>
