--- a/frontend/public/search.html
+++ b/frontend/public/search.html
@@ -25,6 +25,6 @@
         <!-- Add your footer content here -->
     </footer>
 
-    <script src="../src/App.js"></script>
+    <script src="../src/components/SearchForm/SearchForm.js"></script>
 </body>
 </html>
