add temporary button functionality and connections between pages

--- a/frontend/public/movie_list.html
+++ b/frontend/public/movie_list.html
@@ -16,6 +16,7 @@
 <body>
     <header>
         <a href="index.html">Home</a>
+        <a href="search.html">Search</a>
     </header>
 
     <main>
