--- a/frontend/public/signup.html
+++ b/frontend/public/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Movie Recommendation App</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="../src/App.css">
 </head>
 <body>
@@ -31,11 +31,7 @@
         <p>Already have an account? <a href="login.html">Login here</a>.</p>
     </main>
 
-    <footer>
-        <!-- Add your footer content here -->
-    </footer>
-
-    <script src="../src/components/SignupForm/SignupForm.js></script>
+    <script src="../src/components/SignupForm/SignupForm.js"></script>
 
 </body>
 </html>
