--- a/frontend/public/movie_details.html
+++ b/frontend/public/movie_details.html
@@ -10,6 +10,7 @@
     <header>
         <a href="index.html">Home</a>
         <a href="search.html">Search</a>
+        <a href="movie_list.html">Movie List</a>
     </header>
 
     <main>
