--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,26 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Recommendation App</title>
-    <link rel="stylesheet" href="../src/App.css">
+    <link rel="stylesheet" href="../src/index.css">
 </head>
 <body>
-    <header>
-        <!-- Add your navigation menu or links here -->
-    </header>
-
-    <main>
-        <h1>Welcome to the Movie Recommendation App</h1>
-        <p>Your one-stop-shop for finding the best movies to watch.</p>
-        <nav>
-            <a href="login.html">Login</a>
-            <a href="signup.html">Sign Up</a>
-        </nav>
-    </main>
-
-    <footer>
-        <!-- Add your footer content here -->
-    </footer>
-
-    <script src="../src/App.js"></script>
+    <div id="root"></div>
+    <script type="module" src="../src/index.js"></script>
 </body>
 </html>
